--- a/index.html
+++ b/index.html
@@ -4,12 +4,54 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
     <title>My spotify</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <div class="container">
         <main>
-            <nav></nav>
+            <nav>
+                <div class="logo left">
+                    <img src="img/logo.svg" alt="">
+                </div>
+
+                <div class="i-text">
+                    <img src="img/home.svg" alt="Home" class="left"><p>Home</p>
+                    <img src="img/search.svg" alt="Cerca" class="left"></i><p>Cerca</p>
+                    <img src="img/libreria.svg" alt="Libreria" class="left"></i></i><p>La tua libreria</p>
+                </div>
+
+                <p class="mini-title left">Playlist</p>
+                
+                <div class="create">
+                    <i class="fa-solid fa-plus"></i>
+                    <p>Crea Playlist</p>
+                </div>
+
+                <ul class="left">
+                    <li>Nome Playlist</li>
+                    <li>Nome Playlist</li>
+                    <li>Nome Playlist</li>
+                    <li>Nome Playlist</li>
+                    <li>Nome Playlist</li>
+                    <li>Nome Playlist</li>
+                    <li>Nome Playlist</li>
+                </ul>
+
+                <div class="bottom left">
+                    <img src="img/download.svg" alt="download">
+                    <p>Installa app</p>
+                    <hr>
+                    <div class="acc">
+                        <img src="img/profile.svg" alt="profilo"> 
+                        <p>John Doe</p>
+                    </div>
+                </div>
+            </nav>
             <div class="box">
                 <div class="top"></div>
                 <div class="content">
