--- a/index.html
+++ b/index.html
@@ -53,14 +53,152 @@
                 </div>
             </nav>
             <div class="box">
-                <div class="top"></div>
+
+                <div class="top">
+                    <a href="">Effettua L'upgrade</a>
+                </div>
+
                 <div class="content">
-                    
+                    <ul>
+                        <li>in evidenza</li>
+                        <li>podcast</li>
+                        <li>classifiche</li>
+                        <li>generi e mood</li>
+                        <li>nuove uscite</li>
+                        <li>scopri</li>
+                    </ul>
+
+                    <h1>Recently Played</h1>
+
+                    <section class="recent">
+                        <div class="album">
+                            <img src="img/metal_lifting.jpg" alt="metal">
+                            <div class="name">
+                                <p>Heavy Metal</p>
+                                <p class="subs">Subtitle</p>
+                            </div>
+                        </div>
+
+                        <div class="album">
+                            <img src="img/stranger.jpeg" alt="stranger">
+                            <div class="name">
+                                <p>Stranger Things, Vol.1 (a NEtflix Orginal Series Soundtrack)</p>
+                                <p class="subs">Kyle Dixon & Michael Stein</p>
+                            </div>
+                        </div>
+
+                        <div class="album">
+                            <img src="img/aquietplace.jpeg" alt="quiet">
+                            <div class="name">
+                                <p>A Quiet Place</p>
+                                <p class="subs">Subtitle</p>
+                            </div>
+                        </div>
+
+                        <div class="album">
+                            <img src="img/split.jpeg" alt="">
+                            <div class="name">
+                                <p>Split</p>
+                                <p class="subs">Subtitle</p>
+                            </div>
+                        </div>
+
+                        <div class="album">
+                            <img src="img/cure.jpeg" alt="cura">
+                            <div class="name">
+                                <p>A Cure For Wellness</p>
+                                <p class="subs">Subtitle</p>
+                            </div>
+                        </div>
+
+                        <div class="album">
+                            <img src="img/sinister.jpeg" alt="sinistro">
+                            <div class="name">
+                                <p>Sinister</p>
+                                <p class="subs">Subtitle</p>
+                            </div>
+                        </div>
+                    </section>
+
+                    <p class="title">Creato per John Doe</p>
+                    <p class="subs">più ascolti, più accurati saranno i suggerimenti.</p>
+
+                    <section class="mix">
+                        <div class="album">
+                            <img src="img/radar.jpeg" alt="radar">
+                            <div class="name">
+                                <p>Release Radar</p>
+                            </div>
+                        </div>
+                        <div class="album">
+                            <img src="img/mixdaily.jpeg" alt="mix">
+                            <div class="name">
+                                <p>Daily Mix</p>
+                            </div>
+                        </div>
+                    </section>
+
+                    <p class="title">Artisti più popolari</p>
+                    <p class="subs">più ascolti, più accurati saranno i suggerimenti.</p>
+
+                    <section class="circle mix">
+                        <div class="album">
+                            <img src="img/youg.jpeg" alt="lana">
+                            <div class="name">
+                                <p>Lana Del Rey</p>
+                            </div>
+                        </div>
+                        <div class="album">
+                            <img src="img/einaudi.jpeg" alt="Einaudi">
+                            <div class="name">
+                                <p>Ludovico Einaudi</p>
+                            </div>
+                        </div>
+                    </section>
                 </div>
             </div>
         </main>
 
-        <footer></footer>
+        <footer>
+            <div class="rip">
+                <img src="img/sinister.jpeg" alt="sinister">
+                <div class="altext">
+                    <p>Sinister</p>
+                    <p class="grey">Brano Nome</p>
+                </div>
+                <div class="icons">
+                    <i class="fa-regular fa-heart"></i>
+                    <i class="fa-regular fa-folder"></i>
+                </div>
+            </div>
+
+            <div class="center">
+                <div class="commands">
+                    <i class="fa-solid fa-shuffle"></i>
+                    <i class="fa-solid fa-backward-step"></i>
+                    <i class="fa-regular fa-circle-play"></i>
+                    <i class="fa-solid fa-forward-step"></i>
+                    <i class="fa-solid fa-arrow-rotate-right"></i>
+                </div>
+                <div class="timer">
+                    <p class="time">0:25</p>
+                    <div class="charge">
+                        <div class="charged"></div>
+                    </div>
+                    <p class="time">4:35</p>
+
+                </div>
+            </div>
+
+            <div class="right">
+                <i class="fa-solid fa-list"></i>
+                <i class="fa-solid fa-tv"></i>
+                <i class="fa-solid fa-volume-high"></i>
+                <div class="charge two">
+                    <div class="charged"></div>
+                </div>
+            </div>
+        </footer>
     </div>
 </body>
 </html>
