--- a/index.html
+++ b/index.html
@@ -60,12 +60,24 @@
 
                 <div class="content">
                     <ul>
-                        <li>in evidenza</li>
-                        <li>podcast</li>
-                        <li>classifiche</li>
-                        <li>generi e mood</li>
-                        <li>nuove uscite</li>
-                        <li>scopri</li>
+                        <li>in evidenza
+                            <div class="color"></div>
+                        </li>
+                        <li>podcast
+                            <div class="color"></div>
+                        </li>
+                        <li>classifiche
+                            <div class="color"></div>
+                        </li>
+                        <li>generi e mood
+                            <div class="color"></div>
+                        </li>
+                        <li>nuove uscite
+                            <div class="color"></div>
+                        </li>
+                        <li>scopri
+                            <div class="color"></div>
+                        </li>
                     </ul>
 
                     <h1>Recently Played</h1>
@@ -73,6 +85,7 @@
                     <section class="recent">
                         <div class="album">
                             <img src="img/metal_lifting.jpg" alt="metal">
+                            <i class="fa-regular fa-circle-play"></i>
                             <div class="name">
                                 <p>Heavy Metal</p>
                                 <p class="subs">Subtitle</p>
@@ -81,6 +94,7 @@
 
                         <div class="album">
                             <img src="img/stranger.jpeg" alt="stranger">
+                            <i class="fa-regular fa-circle-play"></i>
                             <div class="name">
                                 <p>Stranger Things, Vol.1 (a NEtflix Orginal Series Soundtrack)</p>
                                 <p class="subs">Kyle Dixon & Michael Stein</p>
@@ -89,6 +103,7 @@
 
                         <div class="album">
                             <img src="img/aquietplace.jpeg" alt="quiet">
+                            <i class="fa-regular fa-circle-play"></i>
                             <div class="name">
                                 <p>A Quiet Place</p>
                                 <p class="subs">Subtitle</p>
@@ -96,7 +111,8 @@
                         </div>
 
                         <div class="album">
-                            <img src="img/split.jpeg" alt="">
+                            <img src="img/split.jpeg" alt="split">
+                            <i class="fa-regular fa-circle-play"></i>
                             <div class="name">
                                 <p>Split</p>
                                 <p class="subs">Subtitle</p>
@@ -105,6 +121,7 @@
 
                         <div class="album">
                             <img src="img/cure.jpeg" alt="cura">
+                            <i class="fa-regular fa-circle-play"></i>
                             <div class="name">
                                 <p>A Cure For Wellness</p>
                                 <p class="subs">Subtitle</p>
@@ -113,6 +130,7 @@
 
                         <div class="album">
                             <img src="img/sinister.jpeg" alt="sinistro">
+                            <i class="fa-regular fa-circle-play"></i>
                             <div class="name">
                                 <p>Sinister</p>
                                 <p class="subs">Subtitle</p>
@@ -126,12 +144,14 @@
                     <section class="mix">
                         <div class="album">
                             <img src="img/radar.jpeg" alt="radar">
+                            <i class="fa-regular fa-circle-play"></i>
                             <div class="name">
                                 <p>Release Radar</p>
                             </div>
                         </div>
                         <div class="album">
                             <img src="img/mixdaily.jpeg" alt="mix">
+                            <i class="fa-regular fa-circle-play"></i>
                             <div class="name">
                                 <p>Daily Mix</p>
                             </div>
@@ -176,14 +196,16 @@
                 <div class="commands">
                     <i class="fa-solid fa-shuffle"></i>
                     <i class="fa-solid fa-backward-step"></i>
-                    <i class="fa-regular fa-circle-play"></i>
+                    <div class="bigger">
+                        <i class="fa-regular fa-circle-play"></i>
+                    </div>
                     <i class="fa-solid fa-forward-step"></i>
                     <i class="fa-solid fa-arrow-rotate-right"></i>
                 </div>
                 <div class="timer">
                     <p class="time">0:25</p>
                     <div class="charge">
-                        <div class="charged"></div>
+                        <div class="charged"><i class="fa-solid fa-circle"></i></div>
                     </div>
                     <p class="time">4:35</p>
 
@@ -195,7 +217,7 @@
                 <i class="fa-solid fa-tv"></i>
                 <i class="fa-solid fa-volume-high"></i>
                 <div class="charge two">
-                    <div class="charged"></div>
+                    <div class="charged"><i class="fa-solid fa-circle"></i></div>
                 </div>
             </div>
         </footer>
