--- a/index.html
+++ b/index.html
@@ -20,9 +20,16 @@
                 </div>
 
                 <div class="i-text">
-                    <img src="img/home.svg" alt="Home" class="left"><p>Home</p>
-                    <img src="img/search.svg" alt="Cerca" class="left"></i><p>Cerca</p>
-                    <img src="img/libreria.svg" alt="Libreria" class="left"></i></i><p>La tua libreria</p>
+                    <div class="select">
+                        <img src="img/home.svg" alt="Home" class="left"><p>Home</p>
+
+                    </div>
+                    <div class="select">
+                        <img src="img/search.svg" alt="Cerca" class="left"></i><p>Cerca</p>
+                    </div>
+                    <div class="select">
+                        <img src="img/libreria.svg" alt="Libreria" class="left"></i></i><p>La tua libreria</p>
+                    </div>
                 </div>
 
                 <p class="mini-title left">Playlist</p>
@@ -32,23 +39,25 @@
                     <p>Crea Playlist</p>
                 </div>
 
-                <ul class="left">
-                    <li>Nome Playlist</li>
-                    <li>Nome Playlist</li>
-                    <li>Nome Playlist</li>
-                    <li>Nome Playlist</li>
-                    <li>Nome Playlist</li>
-                    <li>Nome Playlist</li>
-                    <li>Nome Playlist</li>
-                </ul>
-
-                <div class="bottom left">
-                    <img src="img/download.svg" alt="download">
-                    <p>Installa app</p>
-                    <hr>
-                    <div class="acc">
-                        <img src="img/profile.svg" alt="profilo"> 
-                        <p>John Doe</p>
+                <div class="big-bottom">
+                    <ul class="left">
+                        <li>Nome Playlist</li>
+                        <li>Nome Playlist</li>
+                        <li>Nome Playlist</li>
+                        <li>Nome Playlist</li>
+                        <li>Nome Playlist</li>
+                        <li>Nome Playlist</li>
+                        <li>Nome Playlist</li>
+                    </ul>
+    
+                    <div class="bottom left">
+                        <img src="img/download.svg" alt="download">
+                        <p>Installa app</p>
+                        <hr>
+                        <div class="acc">
+                            <img src="img/profile.svg" alt="profilo"> 
+                            <p>John Doe</p>
+                        </div>
                     </div>
                 </div>
             </nav>
