agggiunta di commenti

--- a/index.html
+++ b/index.html
@@ -12,13 +12,16 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <!-- contenitore generale -->
     <div class="container">
+        <!-- contenitore porzione superiore -->
         <main>
+            <!-- barra di navigazione -->
             <nav>
                 <div class="logo left">
                     <img src="img/logo.svg" alt="">
                 </div>
-
+                <!-- contenitore icone svg e testo -->
                 <div class="i-text">
                     <div class="select">
                         <img src="img/home.svg" alt="Home" class="left"><p>Home</p>
@@ -38,7 +41,7 @@
                     <i class="fa-solid fa-plus"></i>
                     <p>Crea Playlist</p>
                 </div>
-                
+                <!-- lista -->
                 <ul class="left">
                     <li>Nome Playlist</li>
                     <li>Nome Playlist</li>
@@ -48,7 +51,7 @@
                     <li>Nome Playlist</li>
                     <li>Nome Playlist</li>
                 </ul>
-    
+                <!-- porzione inferiore -->
                 <div class="bottom left">
                     <img src="img/download.svg" alt="download">
                     <p>Installa app</p>
@@ -59,12 +62,15 @@
                     </div>
                 </div>
             </nav>
-            <div class="box">
+            <!-- /navigatore -->
 
+            <!-- porizione laterale -->
+            <div class="box">
+                <!-- bottone superiore -->
                 <div class="top">
                     <a href="">Effettua L'upgrade</a>
                 </div>
-
+                <!-- contenuto principale -->
                 <div class="content">
                     <ul>
                         <li>in evidenza
@@ -184,9 +190,11 @@
                     </section>
                 </div>
             </div>
+            <!-- /porzione laterale -->
         </main>
-
+        <!-- footer -->
         <footer>
+            <!-- sezione di sinistra -->
             <div class="rip">
                 <img src="img/sinister.jpeg" alt="sinister">
                 <div class="altext">
@@ -198,7 +206,7 @@
                     <i class="fa-regular fa-folder"></i>
                 </div>
             </div>
-
+            <!-- sezione centrale -->
             <div class="center">
                 <div class="commands">
                     <i class="fa-solid fa-shuffle"></i>
@@ -209,16 +217,16 @@
                     <i class="fa-solid fa-forward-step"></i>
                     <i class="fa-solid fa-arrow-rotate-right"></i>
                 </div>
+                <!-- barra del tempo -->
                 <div class="timer">
                     <p class="time">0:25</p>
                     <div class="charge">
                         <div class="charged"><i class="fa-solid fa-circle"></i></div>
                     </div>
                     <p class="time">4:35</p>
-
                 </div>
             </div>
-
+            <!-- sezione di destra -->
             <div class="right">
                 <i class="fa-solid fa-list"></i>
                 <i class="fa-solid fa-tv"></i>
@@ -228,6 +236,7 @@
                 </div>
             </div>
         </footer>
+        <!-- /footer -->
     </div>
 </body>
 </html>
