completamento bonus e dropdown menu

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 <!-- contenuto principale -->
                 <div class="content">
                     <ul>
-                        <li><a href="">in evidenza</a>
+                        <li><a href="bonus/index.html">in evidenza</a>
                             <div class="color"></div>
                         </li>
                         <li>podcast
