aggiunto titoli a bonus

--- a/bonus/index.html
+++ b/bonus/index.html
@@ -92,6 +92,12 @@
     
                     <div class="lista">
                         <div class="song">
+                            <div class="descrizione">
+                                <p class="canzone">Canzone</p>
+                                <p class="numero">Ascolti</p>
+                                <p class="lenght">Durata</p>
+                            </div>
+                            <div class="separator"></div>
                             <div class="toto">
                                 <img src="img/chainsawone.webp" alt="">
                                 <p class="title">Chainsaw</p>
