risolto hover bottone play

--- a/index.html
+++ b/index.html
@@ -97,8 +97,10 @@
 
                     <section class="recent">
                         <div class="album">
-                            <img src="img/metal_lifting.jpg" alt="metal">
+                            <div class="diff">
+                                <img src="img/metal_lifting.jpg" alt="metal">
                             <i class="fa-regular fa-circle-play"></i>
+                            </div>
                             <div class="name">
                                 <p>Heavy Metal</p>
                                 <p class="subs">Subtitle</p>
@@ -106,8 +108,10 @@
                         </div>
 
                         <div class="album">
-                            <img src="img/stranger.jpeg" alt="stranger">
-                            <i class="fa-regular fa-circle-play"></i>
+                            <div class="diff">
+                                <img src="img/stranger.jpeg" alt="stranger">
+                                <i class="fa-regular fa-circle-play"></i>
+                            </div>
                             <div class="name">
                                 <p>Stranger Things, Vol.1 (a NEtflix Orginal Series Soundtrack)</p>
                                 <p class="subs">Kyle Dixon & Michael Stein</p>
@@ -115,8 +119,10 @@
                         </div>
 
                         <div class="album">
-                            <img src="img/aquietplace.jpeg" alt="quiet">
-                            <i class="fa-regular fa-circle-play"></i>
+                            <div class="diff">
+                                <img src="img/aquietplace.jpeg" alt="quiet">
+                                <i class="fa-regular fa-circle-play"></i>
+                            </div>
                             <div class="name">
                                 <p>A Quiet Place</p>
                                 <p class="subs">Subtitle</p>
@@ -124,8 +130,10 @@
                         </div>
 
                         <div class="album">
-                            <img src="img/split.jpeg" alt="split">
+                            <div class="diff">
+                                <img src="img/split.jpeg" alt="split">
                             <i class="fa-regular fa-circle-play"></i>
+                            </div>
                             <div class="name">
                                 <p>Split</p>
                                 <p class="subs">Subtitle</p>
@@ -133,8 +141,10 @@
                         </div>
 
                         <div class="album">
-                            <img src="img/cure.jpeg" alt="cura">
-                            <i class="fa-regular fa-circle-play"></i>
+                            <div class="diff">
+                                <img src="img/cure.jpeg" alt="cura">
+                                <i class="fa-regular fa-circle-play"></i>
+                            </div>
                             <div class="name">
                                 <p>A Cure For Wellness</p>
                                 <p class="subs">Subtitle</p>
@@ -142,8 +152,10 @@
                         </div>
 
                         <div class="album">
-                            <img src="img/sinister.jpeg" alt="sinistro">
-                            <i class="fa-regular fa-circle-play"></i>
+                            <div class="diff">
+                                <img src="img/sinister.jpeg" alt="sinistro">
+                                <i class="fa-regular fa-circle-play"></i>
+                            </div>
                             <div class="name">
                                 <p>Sinister</p>
                                 <p class="subs">Subtitle</p>
@@ -156,15 +168,19 @@
 
                     <section class="mix">
                         <div class="album">
-                                <img src="img/radar.jpeg" alt="radar">
-                            <i class="fa-regular fa-circle-play"></i>
+                                <div class="diff">
+                                    <img src="img/radar.jpeg" alt="radar">
+                                    <i class="fa-regular fa-circle-play"></i>
+                                </div>
                             <div class="name">
                                 <p>Release Radar</p>
                             </div>
                         </div>
                         <div class="album">
-                            <img src="img/mixdaily.jpeg" alt="mix">
-                            <i class="fa-regular fa-circle-play"></i>
+                            <div class="diff">
+                                <img src="img/mixdaily.jpeg" alt="mix">
+                                <i class="fa-regular fa-circle-play"></i>
+                            </div>
                             <div class="name">
                                 <p>Daily Mix</p>
                             </div>
